--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     implementation 'com.karumi:dexter:6.0.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.material:material:1.4.0'
